<resources>
    <string name="app_name">Night Race</string>
    <string name="text_confirm">The essence of why extensible markup languages are necessary is explained at Markup language (for example, see Markup language § XML) and at Standard Generalized Markup Language.
        Hundreds of document formats using XML syntax have been developed,[7] including RSS, Atom, SOAP, SVG, and XHTML. XML-based formats have become the default for many office-productivity tools, including Microsoft Office (Office Open XML), OpenOffice.org and LibreOffice (OpenDocument), and Apple\'s iWork[citation needed]. XML has also provided the base language for communication protocols such as XMPP. Applications for the Microsoft .NET Framework use XML files for configuration. Apple has an implementation of a registry based on XML.[8]
        Many industry data standards, e.g. HL7, OTA, FpML, MISMO, NIEM, etc. are based on XML and the rich features of the XML schema specification. Many of these standards are quite complex and it is not uncommon for a specification to comprise several thousand pages.
        In publishing, DITA is an XML industry data standard. XML is used extensively to underpin various publishing formats.
        XML is widely used in a Services Oriented Architecture (SOA). Disparate systems communicate with each other by exchanging XML messages</string>
    <string name="get_ticket">GET e-TICKET</string>
    <string name="ok">Ok</string>
    <string name="errorCallWebervice">Connect network fail, please try again!</string>
    <string name="errorNetworkAccess">No internet</string>
    <string name="phone_number">Phone number</string>
    <string name="input_OTP">OTP Code</string>
    <string name="otp">OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="allow_permission_cam">Please! allow permission camera</string>
    <string name="information_ticket">INFORMATION e-TICKET</string>
    <string name="customer">Customer:</string>
    <string name="ticket_type">Ticket type:</string>
    <string name="receive_time">Receive time:</string>

    <string name="status">Status:</string>
    <string name="giving_gifts">Giving gifts</string>
    <string name="login">Login</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="ticket">e-Ticket</string>
    <string name="total">Total:</string>
    <string name="received">Received</string>
    <string name="not_yet">Not yet</string>
    <string name="term_and_condition">Term and condition</string>
    <string name="confrim">I have read and agreed on terms and conditions of the race</string>
    <string name="night_race">Night race</string>
    <string name="map">Map</string>
    <string name="please_wait">Please waiting</string>
    <string name="location">Location: OLYMPIC STADIUM</string>
    <string name="title_count_down">Our night race start in</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="already_received">Already received</string>
    <string name="not_yet_received">Not yet received</string>
    <string name="allow_permission">Phease! allow permission</string>
    <string name="no_check_has_read">Please agree term and condition</string>
    <string name="has_read">Please agree term and condition</string>
    <string name="please_input_phone">Please enter phone number</string>
    <string name="please_input_otp">Please enter OTP</string>
    <string name="not_metfone">Sorry! Your number is not allowed to login this application</string>
    <string name="no_netword">Connect network fail, please try again later</string>
    <string name="OTP_successfully">Get OTP successfully</string>
    <string name="receive">Receive</string>
    <string name="amount">Amount</string>
    <string name="gift">Gift:</string>

    <string name="check_in">Check in</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="syc_customer">Synchronize manual</string>
    <string name="day">Days</string>
    <string name="hour">Hours</string>
    <string name="minute">Minutes</string>
    <string name="second">Seconds</string>
    <string name="confirm_pin">Confirm pin code</string>
    <string name="set_up_pin_code">Enter pin code</string>
    <string name="synchronize">Synchronize</string>
    <string name="wraning_turn_off_phone">it might be take a few minutes. Please do not turn your phone off</string>

</resources>
