<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">


                <ProgressBar
                    android:id="@+id/pg_percent_new_total"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/circle_progress_foreground" />

                <ProgressBar
                    android:id="@+id/pg_percent_complain_total"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/circle_progress_background"
                    android:rotation="-90" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="test" />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="test" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <View
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/cycler_green" />

                        <TextView
                            android:id="@+id/tvReceived"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_gravity="center_vertical"
                            android:text="@string/received" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <View
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/cycler_red" />

                        <TextView
                            android:id="@+id/tvNotYet"
                            android:textSize="12sp"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_yet" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/size_8dp"
            android:layout_marginRight="@dimen/size_8dp"
            android:background="@color/color_background" />
    </LinearLayout>
</LinearLayout>